<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
SPDX-FileCopyrightText: 2025 Marc Bestmann, German Aerospace Center (DLR)

SPDX-License-Identifier: MIT
-->

<package format="3">

  <name>reachability_map_moveit</name>
  <version>0.0.0</version>
  <description>Generating reachability maps for robots based on URDF and MoveIt config</description>

  <maintainer email="marc.bestmann@dlr.de">Marc Bestmann</maintainer>
  <author email="marc.bestmann@dlr.de">Marc Bestmann</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>visualization_msgs</depend>
  <depend>perception_pcl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
